--- a/NodeJSAddon/package.json
+++ b/NodeJSAddon/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "nan": "*",
-    "streaming-worker-sdk": "*"
+    "streaming-worker-sdk": "*",
+    "streaming-worker": "*"
   }
 }
